feat(config): add AWS RDS PostgreSQL connection in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=auth
+server.port=8080
+
+# Configuración RDS con PostgreSQL
+spring.datasource.url=jdbc:postgresql://hommunity-cluster.cj2ak8w0usxl.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Otros
+# app.upload.dir=uploads
+
+# Swagger
+# springdoc.swagger-ui.tags-sorter=alpha
+# springdoc.swagger-ui.operations-sorter=method
