feat: agrega controlador para manejo de qr

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jackson.time-zone=America/Mexico_City
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Mexico_City
+
 # Otros
 # app.upload.dir=uploads
 
