--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=auth
 server.port=8080
+server.address=0.0.0.0
 
 # Configuración RDS con PostgreSQL
 spring.datasource.url=jdbc:postgresql://hommunity-cluster.cj2ak8w0usxl.us-east-2.rds.amazonaws.com:5432/postgres
@@ -9,6 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jackson.time-zone=America/Mexico_City
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Mexico_City
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Otros
 # app.upload.dir=uploads
