feat: agrega documentacion con swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # app.upload.dir=uploads
 
 # Swagger
-# springdoc.swagger-ui.tags-sorter=alpha
-# springdoc.swagger-ui.operations-sorter=method
+# Ordenar los esquemas de OpenAPI alfabéticamente
+springdoc.swagger-ui.tags-sorter=alpha
+# Ordenar las operaciones de OpenAPI por método
+springdoc.swagger-ui.operations-sorter=method
+# Retrae la documentación de las operaciones
+# springdoc.swagger-ui.doc-expansion=none
